--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -578,201 +578,12 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-/* 
-Header & Footer
-*/
-.primary-nav {
-  font-size: 14px;
-  font-weight: 400;
-  letter-spacing: .5px;
-  text-transform: uppercase;
-  padding-top: 50px;
-}
-.nav {
-  display: flex;
-  justify-content: center;
-}
-
-.primary-header a,
-.primary-footer a {
-  color: black;
-}
-.primary-header a:hover,
-.primary-footer a:hover {
-  color: #344945;
-}
-
-.nav li {
-  display: inline-block;
-  margin: 10px;
-  vertical-align: top;
-}
-
-.primary-footer{
-  padding-top: 50px;
-  padding-bottom: 15px;
-}
-
-
 
 
 /* 
-Custom Styles
+Intro
 */
 
-body{
-  background: #;
-  color: ;;
-  margin: 0 15px;
-}
-
-h1, h2, h3, h4 {
-  color: #;
-}
-
-h1 {
-  font-size: 25px;
-  line-height: 44px;
-  text-transform: capitalize;
-}
-h2 {
-  font-size: 20px;
-  line-height: 44px;
-}
-h3 {
-  font-size: 18px;
-}
-h4 {
-  font-size: 16px;
-}
-h5 {
-  font-size: 14px;
-  font-weight: 400;
-  text-transform: uppercase;
-}
-p{
-  font-size: 15px;
-  font-weight: 381;
-  padding: 5px 0;
-}
-
-/* 
-Buttons
-*/
-
-
-.facebook {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 5px;
-}
-
-.facebook img {
-  max-width: 50%;
-  height: auto;
-  max-height: 75px; /* Adjust the max-height as needed */
-  margin: 0 auto; /* Center horizontally */
-}
-
-.button-container {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 5px; /* Adjust margin as needed */
-}
-
-.button {
-  display: inline-block;
-  padding: 10px 20px;
-  text-decoration: none;
-  color: #fff;
-  background-color: #3498db; /* Adjust background color as needed */
-  border-radius: 5px;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.button:hover {
-  background-color: #2980b9; /* Adjust hover background color as needed */
-}
-
-
-/* 
-Index
-*/
-.intro h1{
-  display: flex;
-  justify-content: center;
-  text-transform: capitalize;
-}
-
-.intro h3{
-  display: flex;
-  justify-content: center;
-  padding-bottom: 10px;
-}
-
-.logoimg {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.logoimg img {
-  padding: 10px;
-  height: 100%;
-  width: 100%;
-  margin: 10px 0;
-  vertical-align: top;
-}
-
-.quote{
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  color: #b30000;
-  padding: 10px 0;
-}
-
-.quote h2{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #b30000;
-  padding: 10px 0;
-}
-
-
-
-a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-bottom: 5px;
-}
-
-
-
-/* 
-Connect
-*/
-
-.contactpage h2{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+.services {
   flex-direction: column;
 }
-
-.contactpage div{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
-}
-
-#contactform{
-  display: none;
-}
-
-  }
