--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -408,6 +408,10 @@ p{
     margin-bottom: 1.5rem;
     color: #024C30;
   }
+
+  #southerntrax{
+    padding-top: 100px;
+  }
   
   .websites {
     display: grid;
@@ -586,4 +590,18 @@ Intro
 
 .services {
   flex-direction: column;
+}
+
+/* 
+Services
+*/
+
+#southerntrax{
+  padding-top: 30px;
+}
+
+@media screen and (max-width: 850px) {
+  #southerntrax{
+    padding-top: 100px;
+  }
 }
