--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -291,6 +291,7 @@ social media banner
     font-size: 1rem;
     color: #333; /* Default text color */
     margin: 0;
+    text-align: center;
   }
   
   
