--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -276,7 +276,7 @@ social media banner
     border-radius: 5px;
     padding: 20px;
     max-width: 500px;
-    flex: 1 1 200px; /* Ensures flexibility and proper width for responsiveness */
+    flex: 1 1 250px; /* Ensures flexibility and proper width for responsiveness */
     text-align: left;
   }
   
@@ -609,6 +609,7 @@ Intro
 
 .service {
   max-width: 100%;
+  flex: 1 1 20px;
 }
 
 /* 
@@ -625,5 +626,6 @@ Services
   
     .service {
       max-width: 100%;
+      flex: 1 1 20px;
     }
   }
